--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
   <div class="card">
     <h2>디버그</h2>
+    <input type="date" id="dateInput" value="2025-12-24" />
+    <button onclick="loadSummary()">조회</button>
     <pre id="raw">(아직 조회 안 함)</pre>
   </div>
 
